<?xml version="1.0"?>
<package format="3">
  <name>pinocchio</name>
  <version>2.4.3</version>
  <description>A fast and flexible implementation of Rigid Body Dynamics algorithms and their analytical derivatives.</description>
  <!-- The maintainer listed here is for the ROS release to receive emails for the buildfarm. 
  Please check the repository URL for full list of authors and maintainers. -->
  <maintainer email="justin.carpentier@inria.fr">Justin Carpentier</maintainer>
  <maintainer email="wolfgang.merkt@ed.ac.uk">Wolfgang Merkt</maintainer>
  <license>BSD</license>

  <url type="website">https://github.com/stack-of-tasks/pinocchio</url>

  <build_depend>git</build_depend>
  <build_depend>doxygen</build_depend>
  <doc_depend>doxygen</doc_depend>
  <depend condition="$ROS_PYTHON_VERSION == 2">python</depend>
  <depend condition="$ROS_PYTHON_VERSION == 3">python3</depend>
  <depend condition="$ROS_PYTHON_VERSION == 2">python-numpy</depend>
  <depend condition="$ROS_PYTHON_VERSION == 3">python3-numpy</depend>
  <depend>liburdfdom-dev</depend>
  <depend>eigen</depend>
  <depend>boost</depend>
  <depend>eigenpy</depend>
  <!-- The ROS-released HPP-FCL is not yet ready for use with Pinocchio out of the box (old version).
  Additionally, as BUILD_WITH_COLLISION_SUPPORT is default OFF, the ROS buildfarm would not configure it proper either way. -->
  <!-- <depend>hpp-fcl</depend> -->

  <buildtool_depend>cmake</buildtool_depend>
  <export>
    <build_type>cmake</build_type>
  </export>
</package>
