<?xml version="1.0"?>
<package format="3">
  <name>pinocchio</name>
  <version>2.6.10</version>
  <description>A fast and flexible implementation of Rigid Body Dynamics algorithms and their analytical derivatives.</description>
  <!-- The maintainer listed here is for the ROS release to receive emails for the buildfarm. 
  Please check the repository URL for full list of authors and maintainers. -->
  <maintainer email="justin.carpentier@inria.fr">Justin Carpentier</maintainer>
  <maintainer email="opensource@wolfgangmerkt.com">Wolfgang Merkt</maintainer>
  <license>BSD-2</license>

  <url type="website">https://github.com/stack-of-tasks/pinocchio</url>

  <build_depend>git</build_depend>
  <build_depend>doxygen</build_depend>
  <doc_depend>doxygen</doc_depend>
  <doc_depend>texlive-latex-base</doc_depend>
  <!-- The following tags are recommended by REP-136 -->
  <exec_depend condition="$ROS_VERSION == 1">catkin</exec_depend>
  <depend condition="$ROS_PYTHON_VERSION == 2">python</depend>
  <depend condition="$ROS_PYTHON_VERSION == 3">python3</depend>
  <depend condition="$ROS_PYTHON_VERSION == 2">python-numpy</depend>
  <depend condition="$ROS_PYTHON_VERSION == 3">python3-numpy</depend>
  <depend>liburdfdom-dev</depend>
  <depend>eigen</depend>
  <depend>boost</depend>
  <depend>eigenpy</depend>
  <depend>hpp-fcl</depend>

  <!-- Compiling Pinocchio with clang reduces build time, required memory, and results in faster runtime. Note: This only specifies the build dependency, it does not auto-select the compiler - this needs to be specified manually -->
  <buildtool_depend>clang</buildtool_depend>

  <buildtool_depend>cmake</buildtool_depend>
  <export>
    <build_type>cmake</build_type>
  </export>
</package>
